# terminal-translate-discord-guild

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ASSUMPTIONS.md
prompt_artifacts/: prompts_terminal_translat-e5380a.txt
src/: main.rs
